--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ instance_password = admin
 
 [instance]
 recipe = plone.recipe.zope2instance
-user = ${config:instance_user}:${config:instance:password}
+user = ${config:instance_user}:${config:instance_password}
 eggs =
     Plone
     collective.portlet.pythonscript
