add-on template

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,9 @@ develop = .
 versions = versions
 parts =
     instance
+    zopeskel
     pydev
+    omelette
 
 [config]
 instance_user = admin
@@ -17,6 +19,20 @@ eggs =
     Plone
     collective.portlet.pythonscript
 
+[zopeskel]
+recipe = zc.recipe.egg
+unzip = true
+eggs =
+    Plone
+    Paste
+    ZopeSkel
+    templer.plone
+    templer.plone.localcommands
+
 [pydev]
 recipe = pb.recipes.pydev
+eggs = ${instance:eggs}
+
+[omelette]
+recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
