--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ develop = .
 versions = versions
 parts =
     instance
+    test
     zopeskel
     pydev
     omelette
@@ -18,6 +19,13 @@ user = ${config:instance_user}:${config:instance_password}
 eggs =
     Plone
     collective.portlet.pythonscript
+
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress']
+eggs =
+    ${instance:eggs}
+    plone.app.testing
 
 [zopeskel]
 recipe = zc.recipe.egg
